configure: check for pread()
The function pread() is GNU specific and might not be available on
all platforms. We need and use that function. Maybe later we need
to write a replacement for it. So add a detection for it.

--- a/config.h.in
+++ b/config.h.in
@@ -49,6 +49,9 @@
 /* Define to 1 if you have the `memset' function. */
 #undef HAVE_MEMSET
 
+/* Define to 1 if you have the `pread' function. */
+#undef HAVE_PREAD
+
 /* Enable /proc/pid/mem support */
 #undef HAVE_PROCMEM
 
