--- a/.travis.yml
+++ b/.travis.yml
@@ -24,9 +24,9 @@ addons:
   # Coverity scan add-on, fires only when pushing to the `coverity_scan` branch
   coverity_scan:
     project:
-      name: "scanmem/scanmem"
+      name: "sriemer/scanmem"
       description: "Build submitted via Travis CI"
-    notification_email: andreastacchiotti@gmail.com
+    notification_email: s.parschauer@gmx.de
     build_command_prepend: "./autogen.sh && ./configure"
     build_command: "make"
     branch_pattern: coverity_scan
@@ -36,7 +36,7 @@ script:
   - docker pull ubuntu:${DUDIST}
   # mount the project git directory to the container and
   # use it as working directory
-  - docker run -t -d --name="${DUDIST}" -v /home/travis/build/${PROJECT_NAME}:${DPRJDIR} -w ${DPRJDIR} ubuntu:${DUDIST} /bin/bash
+  - docker run -t -d --name="${DUDIST}" -v ${TRAVIS_BUILD_DIR}:${DPRJDIR} -w ${DPRJDIR} ubuntu:${DUDIST} /bin/bash
   - docker ps
   - ${DEXEC} "apt-get update && apt-get upgrade -y"
   - ${DEXEC} "apt-get install -y git gcc binutils libtool intltool make libreadline-dev python"
